--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
   <dependencies>
 <!-- -->
     <dependency>
+      <groupId>org.yaml</groupId>
+      <artifactId>snakeyaml</artifactId>
+      <version>1.17</version>
+    </dependency>
+    <dependency>
       <groupId>com.ning</groupId>
       <artifactId>async-http-client</artifactId>
       <version>1.9.0</version>
